SFDC Automation/src/objects/RSM_Trending_Source_Table_FR122__c.object
<CustomObject>
    <description>This is the table which will store the trending data for installations per month</description>
    <fields>
        <fullName>RSM_Count_of_Different_Late_Stages__c</fullName>
        <label>RSM Count of Different Late Stages</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Late_Stage__c</fullName>
        <label>RSM Late Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Transaction_date__c</fullName>
        <label>RSM Transaction date</label>
        <type>Date</type>
    </fields>
    <label>RSM Trending Source Table FR122</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RSM Trending Source Table FR122 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM Trending Sources Table FR122</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>